[gd_scene load_steps=11 format=3 uid="uid://dsw8raqgacxsc"]

[ext_resource type="Script" uid="uid://bjpua3hfywlnl" path="res://Player/player.gd" id="1_73bic"]
[ext_resource type="PackedScene" uid="uid://1plbexydl5t5" path="res://characters/Characters(100x100)/Soldier/Soldier with shadows/maincharacter.tscn" id="2_hqtel"]
[ext_resource type="PackedScene" uid="uid://cphcr81upg72i" path="res://Weapons/weapon-scenes/arrow/gun.tscn" id="3_bt0kc"]
[ext_resource type="Script" uid="uid://wehyo2yaxi8h" path="res://Weapons/weapon_manager.gd" id="4_hqtel"]
[ext_resource type="PackedScene" uid="uid://i1ms0hal5uh2" path="res://Weapons/weapon-scenes/Area_Weapons/Lightning_Strike/lightning_weapon.tscn" id="5_k53q1"]
[ext_resource type="PackedScene" uid="uid://b4tf523itdm0g" path="res://Weapons/weapon-scenes/Aura_Weapon/aura_weapon.tscn" id="6_fhl08"]
[ext_resource type="PackedScene" uid="uid://cgdcx6tesx6iu" path="res://Weapons/weapon-scenes/orbs/orbit_weapon.tscn" id="7_vtle1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csncd"]
size = Vector2(33, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfffa"]
size = Vector2(35, 46)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5sny"]
bg_color = Color(0.623529, 0.866667, 0.317647, 1)

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_73bic")

[node name="maincharacter" parent="." instance=ExtResource("2_hqtel")]
unique_name_in_owner = true
scale = Vector2(7.2799997, 7.2799997)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 11.5)
shape = SubResource("RectangleShape2D_csncd")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(2.5, 8)
shape = SubResource("RectangleShape2D_kfffa")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 100
offset_left = -83.0
offset_top = -185.0
offset_right = 87.0
offset_bottom = -150.0
theme_override_styles/fill = SubResource("StyleBoxFlat_a5sny")
value = 100.0
show_percentage = false

[node name="WeaponManager" type="Node" parent="."]
script = ExtResource("4_hqtel")
available_weapons = Array[PackedScene]([ExtResource("5_k53q1"), ExtResource("6_fhl08"), ExtResource("3_bt0kc"), ExtResource("7_vtle1")])
